fix tabbability and some spacing stuff

--- a/src/assets/styles/posts.css
+++ b/src/assets/styles/posts.css
@@ -86,3 +86,7 @@ aside-toc ul li {
 	text-overflow: ellipsis;
 	overflow: hidden; 
 }
+
+h2, h3, h4 {
+	scroll-margin: 1rem;
+}
